# cobol-packed

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  agent-criticism-map.json  cobol_packed-1.0.0.crate  cobol_packed-1.1.0.crate  deny.toml  migration-capability-matrix.json  project-navigation.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deep-verification.yml  release.yml  rust.yml
benches/: packed_bench.rs
cobol-packed-cobol2rust-preview-package/cobol-packed/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
cobol-packed-cobol2rust-preview-package/cobol-packed/crates/cobol-codegen-rust/: Cargo.toml
cobol-packed-cobol2rust-preview-package/cobol-packed/crates/cobol-codegen-rust/src/: lib.rs
cobol-packed-cobol2rust-preview-package/cobol-packed/crates/cobol-ir/: Cargo.toml
cobol-packed-cobol2rust-preview-package/cobol-packed/crates/cobol-ir/src/: lib.rs
cobol-packed-cobol2rust-preview-package/cobol-packed/crates/cobol-sema/: Cargo.toml
cobol-packed-cobol2rust-preview-package/cobol-packed/crates/cobol-source/: Cargo.toml
cobol-packed-cobol2rust-preview-package/cobol-packed/crates/cobol-syntax/: Cargo.toml
cobol-packed-cobol2rust-preview-package/cobol-packed/docs/: converter.md  deep_verification.md  evolution.md  feature-map.md
cobol-packed-cobol2rust-preview-package/cobol-packed/kani/: proofs.rs
cobol-packed-cobol2rust-preview-package/cobol-packed/src/cli/: args.rs  mod.rs  record.rs
cobol-packed-cobol2rust-preview-package/cobol-packed/subprojects/cobol-packed-deeper/: CHANGELOG.md  Cargo.toml  README-SUBPROJECT.md
cobol-packed-cobol2rust-preview-package/cobol-packed/subprojects/cobol-packed-deeper/benches/: packed_bench.rs
cobol-packed-cobol2rust-preview-package/cobol-packed/subprojects/cobol-packed-deeper/docs/: formal_spec.md  migration_guide.md
cobol-packed-cobol2rust-preview-package/cobol-packed/subprojects/cobol-packed-deeper/examples/: forensic_zero.rs
cobol-packed-cobol2rust-preview-package/cobol-packed/subprojects/cobol-packed-deeper/fuzz/: Cargo.toml
cobol-packed-cobol2rust-preview-package/cobol-packed/subprojects/cobol-packed-deeper/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_roundtrip.rs
cobol-packed-cobol2rust-preview-package/cobol-packed/subprojects/cobol-packed-deeper/src/: lib.rs  simd.rs
cobol-packed-cobol2rust-preview-package/cobol-packed/tests/: converter_smoke.rs
crates/cobol-codegen-rust/: Cargo.toml
crates/cobol-codegen-rust/src/: lib.rs
crates/cobol-dialect/: Cargo.toml
crates/cobol-dialect/src/: lib.rs
crates/cobol-ir/: Cargo.toml
crates/cobol-ir/src/: lib.rs
crates/cobol-packed/: Cargo.toml
crates/cobol-platform/: Cargo.toml
crates/cobol-platform/src/: lib.rs
crates/cobol-python/: Cargo.toml  NOTICE  README.md  SECURITY.md  pyproject.toml
crates/cobol-python/docs/: compliance.md  trademark.md
crates/cobol-python/notebooks/: interactive_conversion.ipynb
crates/cobol-python/python/cobol_converter/: __init__.py  advisor.py  cli.py  dashboard.py  graph_viewer.py  language_server.py  migration_project.py  oracle.py  pytest_helpers.py
crates/cobol-python/python/tests/: conftest.py  test_advisor.py  test_cli.py  test_dashboard.py  test_graph_viewer.py  test_language_server.py  test_migration_project.py  test_notebook_examples.py  test_onboarding_docs.py  test_oracle_helpers.py  test_packaging_metadata.py  test_public_api.py  test_pytest_helpers.py
crates/cobol-python/src/: lib.rs
crates/cobol-record/: Cargo.toml
crates/cobol-record/src/: lib.rs
crates/cobol-runtime/: Cargo.toml
crates/cobol-runtime/src/: lib.rs
crates/cobol-sema/: Cargo.toml
crates/cobol-sema/src/: lib.rs
crates/cobol-source/: Cargo.toml
crates/cobol-source/src/: lib.rs
crates/cobol-syntax/: Cargo.toml
crates/cobol-syntax/src/: lib.rs
crates/cobol-text/: Cargo.toml
crates/cobol-text/src/: lib.rs
crates/cobol-vm/: Cargo.toml
crates/cobol-vm/src/: lib.rs  lib.rs.nul-corrupt-20260608-145436.bak
docs/: ARCHITECTURE.md  agent-criticism-dashboard.md  architecture.md  cli.md  compliance.md  converter.md  deep_verification.md  developer-map.md  evolution.md  feature-map.md  formal_spec.md  installation.md  migration-capability-matrix.md  migration_guide.md  oracle_validation.md  packaging.md  project-navigation.md  python.md  release-readiness.md  repository-guide.md
docs/security/: generated-runtime-red-team.md  scan-summary.md
docs/superpowers/plans/: 2026-05-20-schema-workflow-release.md
docs/superpowers/specs/: 2026-05-20-schema-workflow-release-design.md
examples/notebooks/: cobol2rust_interactive.ipynb
examples/outputs/: strict-record-audit.json
examples/schemas/: strict-record.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_record_codecs.rs  fuzz_record_layout.rs  fuzz_schema_batch.rs  fuzz_source_parser.rs
github-upload-staging/: CONTRIBUTING.md  Cargo.toml  README.md
github-upload-staging/docs/: architecture.md  evolution.md  feature-map.md  migration_guide.md
github-upload-staging/examples/: basic.rs  forensic_zero.rs
github-upload-staging/fuzz/: Cargo.toml
github-upload-staging/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_roundtrip.rs
github-upload-staging/src/cli/: error.rs
kani/: proofs.rs
scripts/: generate-sbom.ps1  generate-sbom.sh  verify-local.ps1  verify-local.sh
security-hardening/: 2026-05-13-cli-attack-pass.md
src/: lib.rs  simd.rs
src/cli/: args.rs  audit.rs  batch.rs  constants.rs  copybook.rs  ebcdic.rs  ebcdic_tables.rs  encoding_catalog.rs  error.rs  field_decode.rs  mixed_dbcs.rs  mixed_dbcs_tables.rs  mod.rs  record.rs  render.rs  schema.rs  schema_compare.rs  schema_emit.rs
tests/: agent_criticism_map.rs  capability_matrix.rs  cli_smoke.rs  converter_abyss_matrix.rs  converter_smoke.rs  oracle_gnucobol.rs  project_navigation.rs
(+4 files in other folders)
