[package]
name = "cobol_packed"
version = "0.6.1"
edition = "2021"
description = "Forensic-grade IBM COMP-3 packed decimal codec for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mearaxera-maker/cobol-packed"
keywords = ["cobol", "comp3", "mainframe", "decimal", "simd"]
categories = ["encoding", "parser-implementations", "finance"]

[dependencies]
rust_decimal = "1.36"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[[bench]]
name = "packed_bench"
harness = false
