[package]
name = "cobol_packed"
version = "1.1.0"
edition = "2021"
rust-version = "1.74"
description = "HostLens forensic CLI and Rust codec for mixed mainframe record decoding, COMP-3, EBCDIC text, and audit trails"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mearaxera-maker/cobol-packed"
homepage = "https://github.com/mearaxera-maker/cobol-packed"
documentation = "https://docs.rs/cobol_packed"
readme = "README.md"
keywords = ["cobol", "packed-decimal", "comp-3", "mainframe", "bcd"]
categories = ["encoding", "parser-implementations", "finance"]
exclude = [
    "fuzz/",
    "kani/",
    ".github/",
    ".generated/",
    "target/",
    "criterion/",
    "dist/",
    "*.crate",
    "*.zip",
]

[features]
default = []
# Enable the operational CLI application and its parsing/reporting dependency stack.
cli = [
    "dep:clap",
    "dep:clap_complete",
    "dep:clap_mangen",
    "dep:csv",
    "dep:serde",
    "dep:serde_json",
    "dep:sha2",
    "dep:toml",
]
# Enable SIMD nibble-expansion validation (AVX2/SSE2 on x86_64).
# When enabled the SIMD nibble expander is compiled and validated against the
# scalar reference; decoding still uses the scalar reference path.
simd = []
# Opt-in to AVX2 specifically. Requires simd feature and a target with avx2.
avx2 = ["simd"]
# Enable the nightly Kani proof harness.  Only useful when running `cargo kani`.
kani = []

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
clap_complete = { version = "4.5", optional = true }
clap_mangen = { version = "0.2", optional = true }
csv = { version = "1.3", optional = true }
rust_decimal = "1.36"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
thiserror = "2.0"
toml = { version = "0.8", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5", features = ["html_reports"] }
predicates = "3.1"
proptest = "1.5"
tempfile = "3.10"

[[bench]]
name = "packed_bench"
harness = false

[[bin]]
name = "cobol-packed"
path = "src/bin/cobol-packed.rs"
required-features = ["cli"]

[[bin]]
name = "hostlens"
path = "src/bin/hostlens.rs"
required-features = ["cli"]

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
