[workspace]
members = [
  "crates/cobol-packed",
  "crates/cobol-codegen-rust",
  "crates/cobol-ir",
  "crates/cobol-platform",
  "crates/cobol-record",
  "crates/cobol-python",
  "crates/cobol-source",
  "crates/cobol-syntax",
  "crates/cobol-sema",
  "crates/cobol-runtime",
  "benches",
  "examples",
  "fuzz",
  "kani",
]
exclude = ["cobol-packed-cobol2rust-preview-package", "github-upload-staging"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mearaxera-maker/cobol-packed"
readme = "README.md"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
