[package]
name = "cobol-packed-fuzz"
version = "0.0.1"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cobol_packed = { path = ".." }
rust_decimal = "1.36"

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_schema_batch"
path = "fuzz_targets/fuzz_schema_batch.rs"
test = false
doc = false
