[package]
name = "cobol-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Python bindings for the COBOL-to-Rust converter"
include = [
    "Cargo.toml",
    "pyproject.toml",
    "README.md",
    "src/**",
    "python/**",
    "notebooks/**",
    "LICENSE",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "NOTICE",
    "SECURITY.md",
    "ENTERPRISE.md",
    "docs/**",
]

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["dep:pyo3", "pyo3/extension-module", "pyo3/abi3-py38"]

[dependencies]
cobol-codegen-rust = { path = "../cobol-codegen-rust" }
cobol-ir = { path = "../cobol-ir" }
cobol-source = { path = "../cobol-source" }
pyo3 = { version = "0.22", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
