[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "cobol-converter"
version = "0.1.0"
description = "Python bindings and CLI for the COBOL-to-Rust converter"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
dependencies = [
    "click>=8.1",
    "tomli>=2.0; python_version < '3.11'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
cobol2rust = "cobol_converter.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[tool.maturin]
bindings = "pyo3"
features = ["extension-module"]
module-name = "cobol2rust"
python-source = "python"
