[package]
name = "cobol-sema"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "Semantic lowering from COBOL AST to converter IR"

[dependencies]
cobol-ir = { path = "../cobol-ir" }
cobol-record = { path = "../cobol-record" }
cobol-syntax = { path = "../cobol-syntax" }
cobol-text = { path = "../cobol-text" }
rust_decimal = "1.36"
